--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     height: 20px;
 }
 #cadastro form{
-    background-color: whitesmoke;
+    background-color: beige;
     width: 25%;
     justify-content: center;
     margin-left: 37%;
@@ -17,7 +17,9 @@
     display: flex;
     padding: 20px;
     flex-direction: column;
-    box-shadow: 0px 0px 5px darkgrey;
+    box-shadow: 0px 0px 5px black;
+    width: 300px;
+    height: 400px;
 }
 #cadastro select{
     border-radius: 5px;
@@ -29,9 +31,52 @@
     padding: 20px;
 }
 .conteiner{
-    border-radius: 14px;
-    margin: 14px;
-    max-width: 500px;
-    width: 100%;
-    box-sizing: 0px 3px 5px rgba(0,0,0, 0,5);
+    border-radius: 19px;
+    background-color: darkolivegreen;
+    width: 1240px;
+    display: block;
+    height: 565px;
+    padding: 12px;
+}
+.input ::placeholder{
+    padding-left: 100px;
+    color: aqua;
+}
+#cadastrar{
+    margin-top: 20px;
+}
+#name{
+    margin: 9px;
+    margin-top: 6px;
+
+}
+#aniversario{
+    margin: 22px;
+    margin-top: 6px;
+    display: flexbox;
+}
+#Email{
+    margin: 45px;
+    margin-top: 2px;
+    display: flexbox;
+}
+#Telefone{
+    margin: 34px;
+    margin-top: 5px;
+    display: flexbox;
+}
+#Endereço{
+    margin: 33px;
+    margin-top: 5px;
+    display: flexbox;
+}
+#Estado{
+    margin: 58px;
+    margin-top: 5px;
+    display: flexbox;
+}
+#Cidade{
+    margin: 45px;
+    margin-top: 5px;
+    display: flexbox;
 }
